still trying to fix alignment, still using h6 method

--- a/index.css
+++ b/index.css
@@ -94,7 +94,7 @@ body {
             font-weight: 400;
             font-size: 20px;
             
-            text-align: left;
+            padding-left: 200px;
             
             color: #B3B3B3; 
         }
